_generated-doc/2.7/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-coordination-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-coordination-config_configuration]]link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-coordination-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-coordination-config_quarkus.hibernate-search-orm.coordination.strategy]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-coordination-config_quarkus.hibernate-search-orm.coordination.strategy[quarkus.hibernate-search-orm.coordination.strategy]`

[.description]
--
The strategy to use for coordinating between threads or even separate instances of the application,
in particular in automatic indexing.

See <<coordination>> for more information.
--|string 
|`none`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-coordination-config_quarkus.hibernate-search-orm.-persistence-unit-name-.coordination.strategy]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-coordination-config_quarkus.hibernate-search-orm.-persistence-unit-name-.coordination.strategy[quarkus.hibernate-search-orm."persistence-unit-name".coordination.strategy]`

[.description]
--
The strategy to use for coordinating between threads or even separate instances of the application,
in particular in automatic indexing.

See <<coordination>> for more information.
--|string 
|`none`

|===