_generated-doc/3.2/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-coordination-config.adoc

:summaryTableId: quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-coordination-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-coordination-config_configuration]]link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-coordination-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-coordination-config_quarkus.hibernate-search-orm.coordination.strategy]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-coordination-config_quarkus.hibernate-search-orm.coordination.strategy[quarkus.hibernate-search-orm.coordination.strategy]`


[.description]
--
The strategy to use for coordinating between threads or even separate instances of the application,
in particular in automatic indexing.

See xref:hibernate-search-orm-elasticsearch.adoc#coordination[coordination] for more information.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_COORDINATION_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_COORDINATION_STRATEGY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`none`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-coordination-config_quarkus.hibernate-search-orm.-persistence-unit-name-.coordination.strategy]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-coordination-config_quarkus.hibernate-search-orm.-persistence-unit-name-.coordination.strategy[quarkus.hibernate-search-orm."persistence-unit-name".coordination.strategy]`


[.description]
--
The strategy to use for coordinating between threads or even separate instances of the application,
in particular in automatic indexing.

See xref:hibernate-search-orm-elasticsearch.adoc#coordination[coordination] for more information.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__COORDINATION_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__COORDINATION_STRATEGY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`none`

|===